rename a1soir - content on faq

--- a/app/views/admin/meeting_mailer/reminder_email.text.erb
+++ b/app/views/admin/meeting_mailer/reminder_email.text.erb
@@ -1,4 +1,4 @@
-N'oubliez pas votre rendez vous prochain chez Autour d'un Soir le  <%= @meeting.datedebut.strftime('%d/%m/%Y à %H:%M') %> 
+N'oubliez pas votre rendez vous prochain chez Autour D'Un Soir le  <%= @meeting.datedebut.strftime('%d/%m/%Y à %H:%M') %> 
 pour <%= @meeting.nom %>.
 
 Lieu du Rdv : 
