--- a/app/views/public/pages/cgv.html.erb
+++ b/app/views/public/pages/cgv.html.erb
@@ -1,4 +1,4 @@
-<%= page_header("Conditions Générales de Vente", "CGV - Autour d'un Soir",
+<%= page_header("Conditions Générales de Vente", "CGV - Autour D'Un Soir",
 image1: "https://images.pexels.com/photos/26238484/pexels-photo-26238484.jpeg",
 image2: "https://images.pexels.com/photos/23500968/pexels-photo-23500968.jpeg") %>
 
@@ -32,13 +32,13 @@ image2: "https://images.pexels.com/photos/23500968/pexels-photo-23500968.jpeg") 
           <%= content_article(
             number: 1,
             title: "Application des CGV",
-            content: "Les présentes Conditions Générales de Vente (les « CGV ») sont applicables dès que vous accédez à la Boutique en ligne Autour d'un Soir URL : https://shop.a1soir.com/ (le « Site Web ») ou passez des commandes par téléphone. Toutefois, les présentes CGV ne s'appliquent pas à tout achat de produits à la Boutique Autour d'un Soir de Cannes."
+            content: "Les présentes Conditions Générales de Vente (les « CGV ») sont applicables dès que vous accédez à la Boutique en ligne Autour D'Un Soir URL : https://shop.a1soir.com/ (le « Site Web ») ou passez des commandes par téléphone. Toutefois, les présentes CGV ne s'appliquent pas à tout achat de produits à la Boutique Autour D'Un Soir de Cannes."
           ) %>
           
           <%= content_article(
             number: 2,
             title: "Définitions",
-            content: "Les références à « nous » ou « notre » dans le cadre de ces CGV désigne la société Autour d'un Soir, quand les références à « vous » ou « votre » vous désigne, en qualité d'utilisateur du Site Web."
+            content: "Les références à « nous » ou « notre » dans le cadre de ces CGV désigne la société Autour D'Un Soir, quand les références à « vous » ou « votre » vous désigne, en qualité d'utilisateur du Site Web."
           ) %>
           
           <%= content_article(
@@ -111,7 +111,7 @@ image2: "https://images.pexels.com/photos/23500968/pexels-photo-23500968.jpeg") 
         <!-- Politique de confidentialité -->
         <%= content_section(id: "confidentialite", icon: "shield-lock", title: "Politique de confidentialité") do %>
           <p class="text-light opacity-75">
-            Dans le cadre de la passation de commande, des processus de validation et de paiement, des informations personnelles pourront être récoltées. Ces données fournies sont stockées dans notre base de données et clients et suivront notre Politique de Confidentialité. Autour d'un soir prend très au sérieux la vie privée de toute personne qui visite notre boutique en ligne et notre boutique physique et plus largement de toute personne qui nous transmet des Données Personnelles (terme défini ci-après) la concernant, à l'occasion d'un contact avec notre marque. Nous traiterons toujours vos Données Personnelles conformément à la réglementation applicable en France et dans l'Union européenne dans le domaine de la protection des données à caractère personnel(« réglementation Informatique et libertés »), incluant notamment :
+            Dans le cadre de la passation de commande, des processus de validation et de paiement, des informations personnelles pourront être récoltées. Ces données fournies sont stockées dans notre base de données et clients et suivront notre Politique de Confidentialité. Autour D'Un Soir prend très au sérieux la vie privée de toute personne qui visite notre boutique en ligne et notre boutique physique et plus largement de toute personne qui nous transmet des Données Personnelles (terme défini ci-après) la concernant, à l'occasion d'un contact avec notre marque. Nous traiterons toujours vos Données Personnelles conformément à la réglementation applicable en France et dans l'Union européenne dans le domaine de la protection des données à caractère personnel(« réglementation Informatique et libertés »), incluant notamment :
           </p>
           <ul class="text-light opacity-75">
             <li>La loi relative à l'informatique, aux fichiers et aux libertés n° 78-17 du 6 janvier 1978 modifiée et ses éventuelles mises à jour ;</li>
@@ -156,7 +156,7 @@ image2: "https://images.pexels.com/photos/23500968/pexels-photo-23500968.jpeg") 
         <!-- Vos droits -->
         <%= content_section(id: "droits", icon: "check-circle", title: "Vos droits") do %>
           <p class="text-light opacity-75">
-            En application de la législation en vigueur, vous disposez d'un droit d'accès, de rectification ou d'effacement, de limitation du traitement de vos données, d'un droit d'opposition, d'un droit à la portabilité de vos données ainsi que du droit de définir des directives relatives au sort de vos données après votre décès, qui s'exercent par courrier électronique (<%= link_to "formulaire de contact", "#{contact_path}#message-form", class: "text-light text-decoration-underline" %>) ou par courrier postal à l'attention Autour d'un Soir, 29 Boulevard Carnot 06400 Cannes, France, accompagné d'une copie d'un titre d'identité.
+            En application de la législation en vigueur, vous disposez d'un droit d'accès, de rectification ou d'effacement, de limitation du traitement de vos données, d'un droit d'opposition, d'un droit à la portabilité de vos données ainsi que du droit de définir des directives relatives au sort de vos données après votre décès, qui s'exercent par courrier électronique (<%= link_to "formulaire de contact", "#{contact_path}#message-form", class: "text-light text-decoration-underline" %>) ou par courrier postal à l'attention Autour D'Un Soir, 29 Boulevard Carnot 06400 Cannes, France, accompagné d'une copie d'un titre d'identité.
           </p>
         <% end %>
 
@@ -268,7 +268,7 @@ image2: "https://images.pexels.com/photos/23500968/pexels-photo-23500968.jpeg") 
           <%= content_article(
             number: 7,
             title: "Contrôle du colis",
-            content: "Nous attirons votre attention sur la nécessité, lors de la réception de votre colis de contrôler son état général. Vous serez responsables du colis et de son contenu lorsqu'il vous aura été remis. En cas de problème (colis ouvert, colis vide, contenu abîmé), vous devez refuser le colis et contacter notre Service Client pour signaler le problème et la raison du refus (service client : #{link_to "https://shop.a1soir.com/contact", contact_path, class: "text-light text-decoration-underline"}). Nous vous informons qu'en cas de manquant sans réserve émise, Autour d'un Soir ne pourra être tenu pour responsable et nous ne pourrons garantir un remboursement.".html_safe
+            content: "Nous attirons votre attention sur la nécessité, lors de la réception de votre colis de contrôler son état général. Vous serez responsables du colis et de son contenu lorsqu'il vous aura été remis. En cas de problème (colis ouvert, colis vide, contenu abîmé), vous devez refuser le colis et contacter notre Service Client pour signaler le problème et la raison du refus (service client : #{link_to "https://shop.a1soir.com/contact", contact_path, class: "text-light text-decoration-underline"}). Nous vous informons qu'en cas de manquant sans réserve émise, Autour D'Un Soir ne pourra être tenu pour responsable et nous ne pourrons garantir un remboursement.".html_safe
           ) %>
           
           <%= content_article(
@@ -499,7 +499,7 @@ image2: "https://images.pexels.com/photos/23500968/pexels-photo-23500968.jpeg") 
           <%= content_article(
             number: 3,
             title: "Marques déposées",
-            content: "Autour d'un Soir ainsi que les marques qui y sont vendues sur le site sont des marques déposées."
+            content: "Autour D'Un Soir ainsi que les marques qui y sont vendues sur le site sont des marques déposées."
           ) %>
         <% end %>
 
@@ -508,7 +508,7 @@ image2: "https://images.pexels.com/photos/23500968/pexels-photo-23500968.jpeg") 
           <%= content_article(
             number: 1,
             title: "Éditeur du site",
-            content: "Le Site Web est édité par Autour d'un Soir, Société à responsabilité limitée au capital social de 75 000,00 Euro, ayant son siège social au 29 boulevard Carnot, 06400 Cannes, France, immatriculée au Registre du Commerce et des Sociétés de Cannes sous le numéro 880 559 414, tél. 0033 (0)4.93.45.17.17"
+            content: "Le Site Web est édité par Autour D'Un Soir, Société à responsabilité limitée au capital social de 75 000,00 Euro, ayant son siège social au 29 boulevard Carnot, 06400 Cannes, France, immatriculée au Registre du Commerce et des Sociétés de Cannes sous le numéro 880 559 414, tél. 0033 (0)4.93.45.17.17"
           ) %>
           
           <%= content_article(
