--- a/app/views/public/pages/la_boutique/_section_boutique.html.erb
+++ b/app/views/public/pages/la_boutique/_section_boutique.html.erb
@@ -11,7 +11,7 @@
             <span class="section-title-underline"></span>
           </div>
           <p>
-            Plongez dans l'univers d'Autour d'un Soir, où l'élégance rencontre l'exception. Notre boutique de Cannes vous accueille dans un cadre raffiné pour vous accompagner dans le choix de vos tenues de soirée.
+            Plongez dans l'univers d'Autour D'Un Soir, où l'élégance rencontre l'exception. Notre boutique de Cannes vous accueille dans un cadre raffiné pour vous accompagner dans le choix de vos tenues de soirée.
           </p>
           <p>
             Depuis notre création en 1980, nous avons à cœur de vous offrir une expérience unique, alliant conseils personnalisés et sélection rigoureuse de nos pièces. Chaque visite est l'occasion de découvrir des créations qui sauront sublimer vos moments les plus précieux.
