--- a/app/views/public/pages/la_boutique/_section_testimonials.html.erb
+++ b/app/views/public/pages/la_boutique/_section_testimonials.html.erb
@@ -24,7 +24,7 @@
             icon: "people"
           },
           {
-            text: "Pour notre mariage sur le thème des années 20, l'équipe Autour d'un Soir a su habiller tout notre cortège. Un travail remarquable et une équipe à l'écoute !",
+            text: "Pour notre mariage sur le thème des années 20, l'équipe Autour D'Un Soir a su habiller tout notre cortège. Un travail remarquable et une équipe à l'écoute !",
             name: "Sophie & Marc",
             subtitle: "Mariage thématique",
             icon: "heart"
