--- a/app/views/public/pages/le_concept/_section_sticky_text.html.erb
+++ b/app/views/public/pages/le_concept/_section_sticky_text.html.erb
@@ -12,7 +12,7 @@
       </div>
       <div class="col-12 col-lg-6 ps-lg-5">
         <p class="lead text-light mb-0" style="font-size: 1.15rem; line-height: 1.8; font-weight: 300;">
-          Autour d'un Soir vous accompagne dans chaque étape de votre recherche de la tenue parfaite. 
+          Autour D'Un Soir vous accompagne dans chaque étape de votre recherche de la tenue parfaite. 
           Notre équipe experte est à votre écoute pour vous conseiller et vous guider vers des choix 
           qui reflètent votre personnalité et sublimeront vos moments les plus précieux.
         </p>
