--- a/app/views/public/pages/nos_autres_activites.html.erb
+++ b/app/views/public/pages/nos_autres_activites.html.erb
@@ -12,7 +12,7 @@
     <%= render partial: "public/shared/section_image_text", locals: {
       title: "Bien plus qu'une simple boutique",
       image_path: "/images/tournage.webp",
-      description: "Au-delà de nos collections de tenues de soirée, Autour d'un Soir vous accompagne dans tous vos projets nécessitant des tenues d'exception. Que ce soit pour un événement d'entreprise, une production audiovisuelle ou une reconstitution historique, nous sommes là pour vous.",
+      description: "Au-delà de nos collections de tenues de soirée, Autour D'Un Soir vous accompagne dans tous vos projets nécessitant des tenues d'exception. Que ce soit pour un événement d'entreprise, une production audiovisuelle ou une reconstitution historique, nous sommes là pour vous.",
       features: [
         "Costumes d'époque",
         "Événements d'entreprise",
