--- a/app/views/public/shared/_footer.html.erb
+++ b/app/views/public/shared/_footer.html.erb
@@ -99,7 +99,7 @@
       <div class="row">
         <div class="col-12 text-center">
           <p class="text-light small mb-0 opacity-75">
-            &copy; <%= Time.current.year %> Autour d'un Soir - Tous droits réservés
+            &copy; <%= Time.current.year %> Autour D'Un Soir - Tous droits réservés
           </p>
         </div>
       </div>
